# photoshop-python-api

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .hound.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yaml  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bumpversion.yml  code-check.yml  docs.yml  import-test.yml  publish_docs.yml  python-publish.yml  pythonpackage.yml  test_docs.yaml  tests.yml
api/: index.html
assets/pymdownx-extras/: extra-02e418c270.css  extra-18bc87a1f2.css  extra-2d3bedca0e.css  material-extra-3rdparty-804b836e.js
changelog/: index.html
docs/: 404.html  __init__.py  api.rst  changelog.md  conf.py  gen_api_nav.py  gen_examples.py  generate_examples.py  generate_usage.py  index.html  index.md  index.rst  installation.rst  make.bat  requirements.txt  sitemap.xml  usage.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/examples/: index.html
docs/search/: search_index.json
docs/src/: modules.rst  photoshop.colors.rst  photoshop.rst  photoshop.save_options.rst  photoshop_python_api.colors.rst  photoshop_python_api.rst  photoshop_python_api.save_options.rst
docs_src/: Makefile  examples.md  generate_examples.py  index.md  requirements.txt
example/: call_jsx.py  color.py  create_thumbnail.py  example.py  pyside_open_psd.py  save_to_psd.py
examples/: SmartSharpen.py  __init__.py  _psd_files.py  aaaa.py  active_layer.py  add_metadata.py  add_slate.py  add_start_application_event.py  apply_crystallize_filter_action.py  apply_fillters.py  apply_filters.py  change_color_of_background_and_foreground.py  color.py  compare_colors.py  convert_smartobject_to_layer.py  copy_and_paste.py  create_new_document.py  create_thumbnail.py  creating_a_layer.py  cropping.py  current_tool.py  delete_and_fill_selection.py  do_photoshop_action.py  emboss_action.py  enable_generator.py  eval_javascript.py  export_artboards.py  export_document.py  export_document_with_options.py  export_layers_as_png.psd  export_layers_as_png.py  export_layers_use_export_options_saveforweb.py  fill_selection.py  fit_on_screen.py  get_document_by_name.py  get_layer_by_name.py  hello_world.py  import_image_as_layer.py  index.html  layer_comps.psd  (+33 more)
examples/files/: artboard_example.psd  replace_images.psd  trim.psd
photoshop/: __init__.py  __version__.py  _core.py  action_descriptor.py  action_descruotor.py  action_refrence.py  active_layer.py  application.py  art_layer.py  art_layers.py  document.py  errors.py  index.html  layerSets.py  layer_kind.py  layers.py  preferences.py  selection.py  session.py  text_item.py
photoshop/api/: __init__.py  _actionmanager_type_binder.py  _active_layer.py  _artlayer.py  _artlayers.py  _channel.py  _channels.py  _collection_base.py  _core.py  _document.py  _documentinfo.py  _documents.py  _layer.py  _layerComp.py  _layerComps.py  _layerSet.py  _layerSets.py  _layers.py  _measurement_log.py  _notifier.py  _notifiers.py  _preferences.py  _selection.py  _text_fonts.py  action_descriptor.py  action_list.py  action_reference.py  application.py  base_action.py  batch_options.py  collections.py  constants.py  enumerations.py  errors.py  event_id.py  index.html  path_item.py  path_items.py  path_point.py  path_point_info.py  (+6 more)
photoshop/api/_active_layer/: index.html
photoshop/api/_artlayer/: index.html
photoshop/api/_artlayers/: index.html
photoshop/api/_channel/: index.html
photoshop/api/_channels/: index.html
photoshop/api/_core/: index.html
photoshop/api/_document/: index.html
photoshop/api/_documentinfo/: index.html
photoshop/api/_documents/: index.html
photoshop/colors/: __init__.py  hsb.py  rgb.py
photoshop/save_options/: gif.py  jpg.py  png.py  psd.py  tif.py
photoshop/session/: index.html
photoshop_python_api/: __init__.py  _basic_option.py  _core.py  action_descruotor.py  action_list.py  action_refrence.py  active_document.py  active_layer.py  application.py  art_layer.py  art_layers.py  basic_option.py  cmyk_color.py  constants.py  core.py  document.py  documents.py  errors.py  layer.py  layerSets.py  layer_kind.py  layers.py  preferences.py  qt_utils.py  rgb_color.py  save_options.py  selection.py  solid_color.py  text_fonts.py  text_item.py  units.py
photoshop_python_api/colors/: __init__.py  cmyk.py  hsb.py  lab.py  rgb_color.py
photoshop_python_api/save_options/: __init__.py  bmp.py  eps.py  gif.py  jpg.py  option.py  pdf.py  png.py  psd.py  tif.py
reference/SUMMARY/: index.html
search/: search_index.json
src/photoshop/: __init__.py  _active_document.py  _artlayer.py  _artlayers.py  _channel.py  _channels.py  _core.py  _document.py  _documentinfo.py  _documents.py  _layer.py  _layerSet.py  _layerSets.py  _layers.py  _measurement_log.py  _notifier.py  _notifiers.py  _preferences.py  _selection.py  _text_fonts.py  action_descriptor.py  action_list.py  action_reference.py  active_document.py  application.py  art_layer.py  artlayer.py  artlayers.py  constants.py  document.py  documents.py  enumerations.py  errors.py  event_id.py  layer.py  layerSet.py  layerSets.py  layers.py  selection.py  session.py  (+5 more)
test/: conftest.py  manual_test_all_examples.py  manual_test_application.py  manual_test_artlayer.py  test_application.py  test_imports.py  test_layer_comps.py  test_solid_color.py  test_text_item.py
test/manual_test/: __init__.py  manual_test_all_examples.py  manual_test_application.py  manual_test_documents.py  manual_test_layer_comps.py  manual_test_new_document.py  manual_test_path_items.py  manual_test_solid_color.py  manual_test_text_item.py
test/test_data/: layer_comps.psd  textitem.psd
(+231 files in other folders)
