[tool.poetry]
name = "photoshop-python-api"
version = "0.24.1"
description = "Python API for Photoshop."
homepage = "https://github.com/loonghao/photoshop-python-api"
repository = "https://github.com/loonghao/photoshop-python-api"
documentation = "https://photoshop-python-api.readthedocs.io/en/master/"
keywords = ["python-api, photoshop-python-api", "photoshop", "python"]
authors = ["longhao <hal.long@outlook.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    { include = "photoshop" },
]
[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
wheel = "^0.45.0"
comtypes = "^1.1.11"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.17.8"
pre-commit = "^2.13.0"
codecov = "^2.1.11"
pylint = "^2.8.2"
isort = "^5.8.0"
pytest = "^8.0.0"
flake8 = "^4.0.0"
mypy = "^1.0"
coverage = "^7.0.0"
mkdocs = "^1.2.2"
mkdocs-git-revision-date-plugin = "^0.3.1"
black = "^23.0.0"
mkdocs-material = "^8.2.5"
mkdocstrings-python = "^1.0.0"
mkdocs-pymdownx-material-extras = "^2.0"
mkdocs-same-dir = "^0.1.1"
mkdocs-include-markdown-plugin = "^3.3.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-autolinks-plugin = "^0.7.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.0.0"
pytest-cov = "^4.0.0"
stringcase = "^1.2.0"
mkdocs-literate-nav = "^0.6.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.24.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "photoshop/__version__.py"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["photoshop", "test"]
filter_files = true
known_first_party = "photoshop"

# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"

force_sort_within_sections = true
force_single_line = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"
