[metadata]
name = photoshop_python_api
description = The API for using COM (Component Object Model) objects interfaces of '
    'Photoshop.
long_description = file: README.rst
url = https://photoshop-python-api.readthedocs.io/en/master/
project_urls =
    Source=https://github.com/loonghao/photoshop_python_api
    Tracker=https://github.com/loonghao/photoshop_python_api/issues

author = Long Hao

license = MIT license
keywords = python api, photoshop python api
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
platforms = cygwin, win32

[bdist_wheel]
universal=1

